--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <!-- banner start -->
         <section class="container" id="banner">
             <div class="row ">
-                <div class="col-lg-12  col-md-12 col-sm-auto">
+                <div class="col-lg-12  col-md-12 col-sm-12">
                     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0"
@@ -102,57 +102,64 @@
                             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
                                 aria-label="Slide 3"></button>
                         </div>
+
+
                         <div class="carousel-inner">
-                            <div class="carousel-item active" data-bs-interval="10000">
-                                <img src="./images/cover/rsz_cover-1.png" class="d-block  img-fluid rounded-3 "
-                                    alt="...">
-                                <div class="carousel-caption d-md-block text-white">
-                                    <div class="">
-                                        <h3 class="fw-bolder text-primary text-wrap">Get Started Digital
-                                            Learning</h3>
-                                        <p class="modal-fullscreen-down  "> <small>It is a long
-                                                established fact that a reader
-                                                <span>will be distracted by the
-                                                    readable
-                                                    content of a page when looking at its layout.</span></small>
-                                        </p>
-                                        <button class="btn btn-primary">Get started</button>
+                            <div class="carousel-item active" data-bs-interval="1300">
+                                <div class="banner_img">
+                                    <img src="./images/cover/rsz_cover-1.png" class="d-block  w-100 rounded-3 "
+                                        height="450px" alt="...">
+                                </div>
 
-                                    </div>
-
+                                <div class="carousel-caption ">
+                                    <h1 class="fw-bolder text-warning mb-4">Get Started Digital
+                                        Learning</h1>
+                                    <p class=" text-white "> It is a long
+                                        established fact that a reader
+                                        will be distracted by the
+                                        readable
+                                        content of a page when looking at its layout.
+                                    </p>
+                                    <button class="btn btn-primary mb-5">Get started</button>
                                 </div>
                             </div>
 
-                            <div class="carousel-item">
-                                <img src="./images/cover/rsz_1cover-2.png" class="d-block img-fluid rounded-3 "
-                                    alt="...">
-                                <div class="carousel-caption d-lg-flex d-md-flex text-white">
+                            <div class="carousel-item" data-bs-interval="1500">
+                                <div class="banner_img">
+                                    <img src="./images/cover/rsz_1cover-2.png" height="450px"
+                                        class="d-block w-100 rounded-3 " alt="...">
+                                </div>
+
+                                <div class="carousel-caption " data-bs-interval="1400">
                                     <div class="banner_text ">
-                                        <h3 class="fw-bolder text-primary text-wrap">Get Started Digital
-                                            Learning</h3>
-                                        <p class=" modal-fullscreen-down fs-6">It is a long
+                                        <h1 class="fw-bolder text-danger text-wrap mb-4">Get Started Digital
+                                            Learning</h1>
+                                        <p class="text-white fs-6">It is a long
                                             established fact that a reader
                                             will be distracted by the
                                             readable
                                             content of a page when looking at its layout.</p>
-                                        <button class="btn btn-primary">Get started</button>
+                                        <button class="btn btn-primary mb-5">Get started</button>
                                     </div>
 
                                 </div>
                             </div>
                             <!-- img-3 -->
                             <div class="carousel-item">
-                                <img src="./images/cover/rsz_cover-3.png" class="d-block h-100 img-fluid rounded-3 "
-                                    alt="...">
-                                <div class="carousel-caption d-lg-flex  d-md-block text-white ">
-                                    <div class="banner_text ">
-                                        <h3 class="fw-bolder text-primary text-wrap ">Get Started Digital
-                                            Learning</h3>
-                                        <p class="modal-fullscreen-down fs-6">It is a long established fact that
-                                            a reader will be distracted by the readable
-                                            content of a page when looking at its layout.</p>
-                                        <button class="btn btn-primary">Get started</button>
-                                    </div>
+                                <div class="banner_img">
+                                    <img src="./images/cover/rsz_cover-3.png" height="450px"
+                                        class="d-block w-100 rounded-3 " alt="...">
+                                </div>
+
+                                <div class="carousel-caption  text-white ">
+
+                                    <h1 class="fw-bolder text-warning text-wrap ">Get Started Digital
+                                        Learning</h1>
+                                    <p class=" mt-3">It is a long established fact that
+                                        a reader will be distracted by the readable
+                                        content of a page when looking at its layout.</p>
+                                    <button class="btn btn-primary mb-5">Get started</button>
+
 
                                 </div>
                             </div>
@@ -175,8 +182,9 @@
         <!-- courses start -->
         <section class="container my-5" id="courses">
             <h2 class="text-center pt-4 fw-bolder">Discover Our Popular <br> Courses</h2>
-            <p class="text-center pb-5">It is a long established fact that a reader will be distracted by the readable
-                <br> content of a page when looking at its layout.
+            <p class="text-center pb-5 mt-2">It is a long established fact that a reader will be distracted by the
+                readable
+                content of a page <br> when looking at its layout.
             </p>
 
             <div class="row">
